# LearnOpenGL

./: CMakeLists.txt
cmake/: BuildExample.cmake
learnogl/: CMakeLists.txt
learnogl/getting-started/: colored_triangle.cc  colored_triangle.vertex  hello_world.cc  hello_world.vertex  index_buffer.cc  uniform.cc  uniform.vertex
learnogl/utility/: build_program_from_shaders.cc  compile_shader_from_single_source_string.cc  create_window.cc  read_file_content.cc  utility.h
source/: CMakeLists.txt
source/getting-started/: colored_triangle.cc  hello_world.cc  index_buffer.cc  uniform.cc
source/shaders/getting-started/: colored_triangle.fragment  index_buffer.fragment  index_buffer.vertex  uniform.fragment
source/utility/: common.h  create_window.cc  gl.h  index_buffer.h  shader.cc  shader.h  vertex_buffer.cc  vertex_buffer.h
